[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/theme_lerimama.tres" type="Theme" id=1]
[ext_resource path="res://lootlocker/PublishPopup.gd" type="Script" id=2]

[node name="PublishPopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 455.0
margin_top = 256.0
margin_right = -455.0
margin_bottom = -256.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.0
margin_top = -112.0
margin_right = 199.0
margin_bottom = 112.0
color = Color( 0.321569, 0.0392157, 0.0392157, 1 )

[node name="Confirm" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -88.0
margin_right = 152.0
margin_bottom = -34.0
grow_horizontal = 2
theme = ExtResource( 1 )
text = "Do you want to publish your score online?"
align = 1
autowrap = true

[node name="PublishBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 6.0
margin_right = -23.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 1 )
text = "YES"
align = 0

[node name="SkipBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = 6.0
margin_right = 52.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 9
size_flags_vertical = 9
theme = ExtResource( 1 )
text = "NO"
align = 0

[connection signal="pressed" from="PublishBtn" to="." method="_on_PublishBtn_pressed"]
[connection signal="pressed" from="SkipBtn" to="." method="_on_SkipBtn_pressed"]
